--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
-        <p class="quote">“It’s truly something that could create a brand new photography Renaissance”</p>
+        <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
         <img class="quote-citation" src="./resources/images/photography-logo.png" />
       </div>
     </div>
